crates/reinhardt-core/crates/macros/tests/ui/field_attributes/fail/generated_without_storage_spec.stderr
error: cannot find derive macro `Model` in this scope
 --> tests/ui/field_attributes/fail/generated_without_storage_spec.rs:3:1
  |
3 | #[model(app_label = "test", table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
help: the derive macro `Model` accepts the similarly named `model` attribute
  |
3 - #[model(app_label = "test", table_name = "users")]
3 + model
  |
help: consider importing one of these derive macros
  |
1 + use reinhardt::Model;
  |
1 + use reinhardt_macros::Model;
  |

error: cannot find attribute `model_config` in this scope
 --> tests/ui/field_attributes/fail/generated_without_storage_spec.rs:3:1
  |
3 | #[model(app_label = "test", table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
help: `model_config` is an attribute that can be used by the derive macro `Model`, you might be missing a `derive` attribute
  |
4 + #[derive(Model)]
5 | struct User {
  |

error: cannot find attribute `field` in this scope
 --> tests/ui/field_attributes/fail/generated_without_storage_spec.rs:5:4
  |
5 |     #[field(primary_key = true)]
  |       ^^^^^
  |
  = note: `field` is an attribute that can be used by the derive macro `Model`, you might be missing a `derive` attribute

error: cannot find attribute `field` in this scope
 --> tests/ui/field_attributes/fail/generated_without_storage_spec.rs:9:4
  |
9 |     #[field(generated = "id * 2")]
  |       ^^^^^
  |
  = note: `field` is an attribute that can be used by the derive macro `Model`, you might be missing a `derive` attribute
